[gd_scene load_steps=5 format=3 uid="uid://b4eqm84e1qin"]

[ext_resource type="Script" path="res://player/UI.gd" id="1_yggyh"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_lhxpk"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_c75bc"]
size = Vector2(16, 16)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_a0bbc"]
size = Vector2(16, 16)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -326.0
offset_right = 577.0
offset_bottom = 326.0
script = ExtResource("1_yggyh")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = 216.0
offset_right = -326.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpellContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 354.0
offset_top = 557.0
offset_right = 780.0
offset_bottom = 574.0

[node name="FireballCooldown" type="TextureProgressBar" parent="SpellContainer"]
layout_mode = 2
texture_under = SubResource("PlaceholderTexture2D_lhxpk")

[node name="BlizzardCooldown" type="TextureProgressBar" parent="SpellContainer"]
layout_mode = 2
texture_under = SubResource("PlaceholderTexture2D_c75bc")

[node name="TeleportCooldown" type="TextureProgressBar" parent="SpellContainer"]
layout_mode = 2
texture_under = SubResource("PlaceholderTexture2D_a0bbc")
